WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
245100
[css-scroll-snap] focus should not take into account scroll margin for visibility check
https://bugs.webkit.org/show_bug.cgi?id=245100
Summary
[css-scroll-snap] focus should not take into account scroll margin for visibi...
Nikos Mouchtaris
Reported
2022-09-12 15:21:49 PDT
Focus should not take into account scroll margin for visibility check
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-09-12 15:22:33 PDT
<
rdar://problem/99840839
>
Nikos Mouchtaris
Comment 2
2022-09-12 15:24:28 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/4284
EWS
Comment 3
2022-09-21 11:11:09 PDT
Committed
254732@main
(f121c13339f2): <
https://commits.webkit.org/254732@main
> Reviewed commits have been landed. Closing PR #4284 and removing active labels.
EWS
Comment 4
2022-10-21 06:36:45 PDT
Committed
252432.631@safari-7614-branch
(18fc4f8a6430): <
https://commits.webkit.org/252432.631@safari-7614-branch
> Reviewed commits have been landed. Closing PR #152 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug